Revert "added semantic similarity metrics to StringUtils.java"
This reverts commit ae72d985ba946ebd4cd945a830564cf67382118b.